# specterext-liquidissuer

./: .gitignore  README.md  amp.py  api_bugs.md  package-lock.json  package.json  serv.py  setup.cfg
public/: index.html  styles.css
public/api/: assets.json  categories.json  registered_users.json
src/: App.vue  main.js  router.js  store.js
src/components/: Navbar.vue  Sidebar.vue  SmartTable.vue
src/cryptoadvance/specterext/ampissuer/: amp.py  config.py  controller.py  service.py
src/cryptoadvance/specterext/ampissuer/static/ampissuer/: styles.css
src/cryptoadvance/specterext/ampissuer/templates/ampissuer/: assets.jinja  base.jinja  categories.jinja  new_asset.jinja  new_category.jinja  new_user.jinja  rawasset.jinja  rawassets.jinja  settings.jinja  treasury.jinja  user.jinja  users.jinja
src/routes/: Asset.vue  Assets.vue  Categories.vue  Category.vue  Dashboard.vue  Login.vue  Managers.vue  User.vue  Users.vue
static/: styles.css
templates/: assets.jinja  base.jinja  categories.jinja  dashboard.jinja  new_asset.jinja  new_assignment.jinja  new_category.jinja  new_user.jinja  settings.jinja  user.jinja  users.jinja
templates/asset/: assignments.jinja  base.jinja  dashboard.jinja  distribution.jinja  distributions.jinja  new_assignment.jinja  reissuance.jinja  settings.jinja  users.jinja  utxos.jinja
templates/components/: sidebar.jinja
templates/includes/: asset_summary.jinja
tests/: conftest.py  devices_and_wallets.py  test_amp.py  test_service.py
v2/: README.md  design.sketch  index.html  styles.css
(+24 files in other folders)
